<resources>
    <string name="title_activity_store">BTT e-Com</string>
    <string name="title_products">Products</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="title_order_history">Order History</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_recent_activity">Recent Activity</string>
    <string name="profile_recent_activity_subtitle">Orders, then favourites</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_member_since">Member since</string>
    <string name="profile_orders_placed">%1$d orders placed</string>
    <string name="profile_saved_items">%1$d saved items</string>
    <string name="favourite_in_stock">In stock</string>
    <string name="favourite_out_of_stock">Out of stock</string>
    <string name="title_settings">Settings</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="checkout">Checkout</string>
    <string name="empty_cart">Cart is empty</string>
    <string name="android_version">Android Version</string>
    <string name="sdk_version">BTT SDK Version</string>
    <string name="app_version">App Version</string>
    <string name="app_flavor">App Flavor</string>
    <string name="site_id">Site ID</string>
    <string name="anr_enabled">ANR Detection</string>
    <string name="screen_tracking_enabled">Screen Tracking</string>
    <string name="session_id">Session ID</string>
    <string name="sessionid_accessibility">sessionid</string>
    <string name="test_manual_timer">Test Manual Timer</string>
    <string name="memory_warning_title">Memory Warning</string>
    <string name="memory_warning_message">Memory warning received. Your app is using too much memory than expected.</string>
    <string name="memory_warning_ok">OK</string>
    <string name="ip_address">192.168.0.106</string>
    <string name="title_activity_compose_about">ComposeAboutActivity</string>
    <string name="hybrid_demo">Hybrid Demo</string>
    <string name="done">Done</string>
    <string name="tag_url">Change Tag URL</string>
    <string name="copy">Copy</string>
    <string name="configuration">Configuration</string>
    <string name="keep_default_configurations">Keep Default Configurations</string>
    <string name="launch_time">Launch Time</string>
    <string name="screen_tracking">Screen Tracking</string>
    <string name="crash_tracking">Crash Tracking</string>
    <string name="anr_tracking">ANR Tracking</string>
    <string name="memory_warning">Memory Warning</string>
    <string name="network_state_tracking">Network State Tracking</string>
    <string name="network_capturing">Network Capturing</string>
    <string name="performance_monitoring">Performance Monitoring</string>
    <string name="apply">Apply</string>
    <string name="configuration_settings">Configuration Settings</string>
    <string name="configure_on_launch">Configure on Launch</string>
    <string name="add_delay">Add Delay</string>
    <string name="launch_configuration">Launch Configuration</string>
</resources>