<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_products">

    <navigation
        android:id="@+id/navigation_products"
        app:startDestination="@id/navigation_products_list">

        <fragment
            android:id="@+id/navigation_products_list"
            android:name="com.bluetriangle.bluetriangledemo.ui.products.ProductsFragment"
            android:label="@string/title_products"
            tools:layout="@layout/fragment_products">
            <action
                android:id="@+id/action_product_list_to_product_detail"
                app:destination="@id/navigation_product_detail" />

        </fragment>

        <fragment
            android:id="@+id/navigation_product_detail"
            android:name="com.bluetriangle.bluetriangledemo.ui.products.ProductDetailFragment"
            android:label="Product Detail"
            tools:layout="@layout/fragment_product_detail">
            <argument
                android:name="product"
                app:argType="com.bluetriangle.bluetriangledemo.data.Product" />
        </fragment>
    </navigation>

    <navigation
        android:id="@+id/navigation_cart"
        app:startDestination="@id/navigation_cart_list">
        <fragment
            android:id="@+id/navigation_cart_list"
            android:name="com.bluetriangle.bluetriangledemo.ui.cart.CartFragment"
            android:label="@string/title_cart"
            tools:layout="@layout/fragment_cart">
            <action
                android:id="@+id/action_cart_to_checkout"
                app:destination="@+id/navigation_checkout" />
        </fragment>

        <fragment
            android:id="@+id/navigation_checkout"
            android:name="com.bluetriangle.bluetriangledemo.ui.cart.CheckoutFragment"
            android:label="Checkout"
            tools:layout="@layout/fragment_checkout" />

    </navigation>

    <navigation
        android:id="@+id/navigation_profile"
        app:startDestination="@id/navigation_profile_home">

        <fragment
            android:id="@+id/navigation_profile_home"
            android:name="com.bluetriangle.bluetriangledemo.ui.profile.ProfileFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/fragment_profile">
            <action
                android:id="@+id/action_profile_to_order_history"
                app:destination="@id/navigation_order_history" />
            <action
                android:id="@+id/action_profile_to_favourites"
                app:destination="@id/navigation_favourites" />
        </fragment>

        <fragment
            android:id="@+id/navigation_order_history"
            android:name="com.bluetriangle.bluetriangledemo.ui.profile.OrderHistoryFragment"
            android:label="@string/title_order_history"
            tools:layout="@layout/fragment_order_history">
            <argument
                android:name="forwardToFavourites"
                android:defaultValue="false"
                app:argType="boolean" />
            <action
                android:id="@+id/action_order_history_to_favourites"
                app:destination="@id/navigation_favourites" />
        </fragment>

        <fragment
            android:id="@+id/navigation_favourites"
            android:name="com.bluetriangle.bluetriangledemo.ui.profile.FavouritesFragment"
            android:label="@string/title_favourites"
            tools:layout="@layout/fragment_favourites" />
    </navigation>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.bluetriangle.bluetriangledemo.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>